<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_gameName"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner_timemode"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:id="@+id/LV_matchingGames"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </ListView>

    <Button
        android:id="@+id/btn_create_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="create game" />
</LinearLayout>