<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_searchGame"
        style="@style/CustomButtonStyle"
        android:text="@string/search_game" />

    <Button
        android:id="@+id/btn_createGame"
        style="@style/CustomButtonStyle"
        android:text="@string/create_game" />

</LinearLayout>